# slurmrun

./: README.md  pyproject.toml
slurmrun/: __init__.py  config.py  main.py  srun.py
